--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
  <head>
+<meta name="keywords" content="COC,Tagalog, Philippines,Clash of Clans, COC Buy and sale Gem, COC Free Gem">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
    <style>
